fixed drag and drop upload on chrome on windows, no longer needs shift either

--- a/src/mercury.css
+++ b/src/mercury.css
@@ -150,6 +150,7 @@ form fieldset.buttons .commit,form ul fieldset.buttons .commit,form ol fieldset.
 .mercury-snippet-toolbar .mercury-dragsnippet-button{background-position:-72px 0;}
 .mercury-snippet-toolbar .mercury-dragsnippet-button.active{background-position:-72px -18px;}
 .mercury-tooltip{position:absolute;top:100px;left:100px;max-width:400px;overflow:hidden;background:rgba(0, 0, 0, 0.7);padding:2px 5px;border-radius:2px;-moz-border-radius:2px;box-shadow:0 0 5px rgba(0, 0, 0, 0.3);-moz-box-shadow:0 0 5px rgba(0, 0, 0, 0.3);font:normal normal normal 11px/normal Helvetica,Tahoma,Arial,sans-serif;color:#EEE;word-wrap:break-word;}.mercury-tooltip a{color:#EEE;text-decoration:none;}.mercury-tooltip a:hover{color:#FFF;}
+[draggable=true]{-khtml-user-drag:element;}
 .mercury-uploader-overlay{position:absolute;z-index:10040;top:0;left:0;width:100%;height:100%;opacity:.95;background:rgba(0, 0, 0, 0.65);}
 .mercury-uploader{position:absolute;z-index:10050;top:300px;left:400px;width:500px;height:150px;overflow:hidden;padding:15px;background:rgba(0, 0, 0, 0.7);border-radius:10px;-moz-border-radius:10px;font:normal normal normal 12px/normal Helvetica,Tahoma,Arial,sans-serif;color:#CCC;}.mercury-uploader .mercury-uploader-preview{float:left;width:150px;height:150px;border:1px solid #CCC;border-radius:5px;-moz-border-radius:5px;}.mercury-uploader .mercury-uploader-preview b{display:table-cell;width:150px;height:150px;text-align:center;vertical-align:middle;}
 .mercury-uploader .mercury-uploader-preview img{margin:5px;max-width:140px;max-height:140px;}
